# RustyShackleford

./: .gitignore  Cargo.toml  README.md
src/: .config.rs.swp  main.rs  utils.rs
src/commands/: text.rs
src/commands/text/: about.rs  help.rs
src/utils/: math_lib.rs  regex_lib.rs
