[package]
name = "rusty_shackleford"
version = "0.1.0"
authors = ["Brian Polasek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
], version = "0.11" }
regex = "1"
dict = "0.1.5"
rand = "0.8.5"
